crates/ruff_python_parser/tests/snapshots/invalid_syntax@debug_shadow_import.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/debug_shadow_import.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..100,
        body: [
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 0..16,
                    names: [
                        Alias {
                            end: 16,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("__debug__"),
                                range: 7..16,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    is_lazy: false,
                },
            ),
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 17..42,
                    names: [
                        Alias {
                            end: 42,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("debug"),
                                range: 24..29,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: Some(
                                Identifier {
                                    id: Name("__debug__"),
                                    range: 33..42,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                            ),
                        },
                    ],
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 43..66,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 48..49,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 66,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("__debug__"),
                                range: 57..66,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 67..99,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 72..73,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 99,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("debug"),
                                range: 81..86,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: Some(
                                Identifier {
                                    id: Name("__debug__"),
                                    range: 90..99,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                            ),
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | import __debug__
  |        ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
2 | import debug as __debug__
3 | from x import __debug__
  |


  |
1 | import __debug__
2 | import debug as __debug__
  |                 ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
3 | from x import __debug__
4 | from x import debug as __debug__
  |


  |
1 | import __debug__
2 | import debug as __debug__
3 | from x import __debug__
  |               ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
4 | from x import debug as __debug__
  |


  |
2 | import debug as __debug__
3 | from x import __debug__
4 | from x import debug as __debug__
  |                        ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
  |
